--- a/rails3_version/app/views/layouts/application.html.erb
+++ b/rails3_version/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<!-- example -->
 <script><%= yield(:javascript) %></script>
 <script><%= yield(:javascript2) %></script>
 <pre>Layout yield :javascript: <%= yield(:javascript).inspect %></pre>
