--- a/rails4_version/app/views/content_test/example.html.erb
+++ b/rails4_version/app/views/content_test/example.html.erb
@@ -1,6 +1,7 @@
 <h1>ContentTest#example</h1>
 <p>Find me in app/views/content_test/example.html.erb</p>
 
+<!-- example -->
 <% content_for(:javascript) do %>
   <%= working_helper %>
 <% end %>
