--- a/rails3_version/app/views/layouts/application.html.erb
+++ b/rails3_version/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
 <body>
 
 <!-- example -->
-<script><%= yield(:javascript) %></script>
-<script><%= yield(:javascript2) %></script>
+<script><%= yield(:javascript); %></script>
+<script><%= Tracer.on; yield(:javascript2); Tracer.off %></script>
+<script><%= Tracer.on; content_for(:javascript2); Tracer.off %></script>
+<% binding.pry %>
 <pre>Layout yield :javascript: <%= yield(:javascript).inspect %></pre>
 <pre>Layout yield :javascript2: <%= yield(:javascript2).inspect %></pre>
 
