I want to know EVERYTHING that happens between when this works and when it doesn't.

--- a/rails3_version/app/views/layouts/application.html.erb
+++ b/rails3_version/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
 <body>
 
 <!-- example -->
-<script><%= yield(:javascript); %></script>
-<script><%= Tracer.on; yield(:javascript2); Tracer.off %></script>
-<script><%= Tracer.on; content_for(:javascript2); Tracer.off %></script>
+<script><%= yield(:javascript) %></script>
+<script><%= yield(:javascript2) %></script>
+<script><%= content_for(:javascript2); Tracer.off %></script>
 <% binding.pry %>
 <pre>Layout yield :javascript: <%= yield(:javascript).inspect %></pre>
 <pre>Layout yield :javascript2: <%= yield(:javascript2).inspect %></pre>
