wow, I actually solved it for rails3.
unbelievable.

take that Rails core team.

no, seriously, that hack requires a group hug... or at least cake...
or maybe a lap or two in DHH's race car... ;D

--- a/rails3_version/app/views/content_test/example.html.erb
+++ b/rails3_version/app/views/content_test/example.html.erb
@@ -13,4 +13,4 @@
 <% end %>
 <pre>Content for :javascript2: <%= content_for(:javascript2).inspect %></pre>
 <% # ALOC
-   binding.pry %>
+   #binding.pry %>
