--- a/rails3_version/app/views/layouts/application.html.erb
+++ b/rails3_version/app/views/layouts/application.html.erb
@@ -9,13 +9,12 @@
 <body>
 
 <!-- example -->
-<script><%= yield(:javascript) %></script>
-<script><%= yield(:javascript2) %></script>
-<script><%= content_for(:javascript2) %></script>
+<script><%= all_content_for(:javascript) %></script>
+<script><%= all_content_for(:javascript2) %></script>
 <% # BLOC
-   binding.pry %>
-<pre>Layout yield :javascript: <%= yield(:javascript).inspect %></pre>
-<pre>Layout yield :javascript2: <%= yield(:javascript2).inspect %></pre>
+   #binding.pry %>
+<pre>Layout all_content_for :javascript: <%= all_content_for(:javascript).inspect %></pre>
+<pre>Layout all_content_for :javascript2: <%= all_content_for(:javascript2).inspect %></pre>
 
 <%= yield %>
 
